REGRESSION (Safari 18): Audio from disabled MediaStreamTrack is published rdar://138321310 https://bugs.webkit.org/show_bug.cgi?id=281758

Reviewed by Eric Carlson.

When cloning or transferring a track, we need to preserve track.enabled.
We make sure to copy this value in MediaStreamTrackPrivate constructor.

When transferring an ended track or a track that is getting ended, the transferring track should be in ended state.
We copy ended in MediaStreamTrackPrivate constructor and we make sure to set the track ready state to ended in MediaStreamTrack::create.

We do not do this in MediaStreamTrack constructor as this path is used for cloning a track.
When cloning a being ended track, we might also want to fire an ended event.
Setting ready state in MediaStreamTrack constructor would prevent this.

* LayoutTests/fast/mediastream/mediastreamtrack-video-clone-expected.txt:
* LayoutTests/fast/mediastream/mediastreamtrack-video-clone.html:
* Source/WebCore/Modules/mediastream/MediaStreamTrack.cpp:
(WebCore::MediaStreamTrack::create):
* Source/WebCore/platform/mediastream/MediaStreamTrackPrivate.cpp:
(WebCore::MediaStreamTrackPrivate::MediaStreamTrackPrivate):

Canonical link: https://commits.webkit.org/285916@main